# PyETWkit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: docs.md  explain.md  fix-lint.md  gh-bug-create.md  gh-feature-create.md  gh-issue.md  gh-issues-from-readme.md  gh-project.md  gh-template.md  improve.md  pr-review.md  refactor.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test-release.yml
crates/pyetwkit-core/: Cargo.toml
crates/pyetwkit-core/src/: discovery.rs  error.rs  etl_reader.rs  event.rs  filter.rs  kernel.rs  lib.rs  provider.rs  schema.rs  session.rs  stats.rs
docs/: cli.rst  conf.py  index.rst  profiles.rst  quickstart.rst  tutorial.md  tutorial.rst
docs/adr/: 0001-use-ferrisetw-for-etw-backend.md
docs/advanced/: etw_basics.rst  low_level.rst
docs/api/: export.rst  listener.rst  profiles.rst  streamer.rst
docs/architecture/: overview.md
docs/research/: ferrisetw-evaluation.md
examples/: README.md  basic_session.py  demo_async_api.py  demo_filtering.py  demo_typed_events.py  demo_v2_features.py  demo_v3_features.py  export_events.py  kernel_trace.py  profiles.py  provider_discovery.py  read_etl.py
src/pyetwkit/: __init__.py  __main__.py  _core.py  _stubs.py  async_api.py  cli.py  correlation.py  dashboard.py  export.py  filtering.py  listener.py  manifest.py  multi_session.py  profiles.py  providers.py  recording.py  rust_filter.py  streamer.py  typed_events.py
src/pyetwkit/exporters/: __init__.py  otlp.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_correlation.py  test_dashboard.py  test_dynamic_provider.py  test_etl_reader.py  test_export.py  test_listener.py  test_manifest_events.py  test_multi_session.py  test_otlp_exporter.py  test_profiles.py  test_provider_discovery.py  test_providers.py  test_recording.py  test_rust_filtering.py  test_schema_loader.py  test_stack_trace.py  test_streamer.py  test_tracelogging.py
tests/fixtures/: create_sample_etl.ps1  sample.etl
