[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyetwkit"
version = "3.0.0"
description = "High-performance ETW (Event Tracing for Windows) consumer library for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "m96-chan" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
keywords = ["etw", "windows", "tracing", "events", "monitoring", "logging"]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
export = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
]
dashboard = [
    "gradio>=4.0",
]

[project.urls]
Homepage = "https://github.com/m96-chan/PyETWkit"
Documentation = "https://pyetwkit.readthedocs.io"
Repository = "https://github.com/m96-chan/PyETWkit"
Issues = "https://github.com/m96-chan/PyETWkit/issues"

[project.scripts]
pyetwkit = "pyetwkit.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "pyetwkit._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "admin: marks tests as requiring administrator privileges",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/pyetwkit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
include = ["src/**/*.py", "tests/**/*.py", "examples/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E402"]  # Allow imports not at top of file for demo scripts

[tool.ruff.lint.isort]
known-first-party = ["pyetwkit"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
